--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "scraper",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,6 @@
     "express-handlebars": "^3.0.2",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1"
-  }
+  },
+  "devDependencies": {}
 }
